@@ -3,6 +3,8 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- use createMultilineLabel()
+- close current area doesn't work
 - favorites menu position of too far to the right
 - finish file system browser autocomplete: doesn't work with expanded tree,
   and differing paths! need to prefix!
